Bug 181260 - Time spent view counts events overlapping midnight twice and doesn't split
Summary: Time spent view counts events overlapping midnight twice and doesn't split
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-01-19 04:41 UTC by James Hogan
Modified: 2009-03-12 16:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description James Hogan 2009-01-19 04:41:58 UTC
Version:           KOrganizer Version 4.1.0 (using KDE 4.1.3)
Compiler:          gcc version 4.3.2 20081105 (Red Hat 4.3.2-7) (GCC) 
OS:                Linux
Installed from:    Fedora RPMs

After upgrading I noticed the Timespent view, and soon noticed that the numbers seemed exadurated. Upon investigation it seems that events crossing midnight are counted in whole twice.

For example, I added a 3hr long event with some category from 22:30 to 01:30.

When I view both days in timespent view, it should count 1.5hr+1.5hr = 3.0hr for that category, however instead it shows 6.0 hours (3.0hr + 3.0hr).

When I view just one of the days in timestamp view it should count 1.5hr for that category (half of the event), however it shows 3.0 hours.
Comment 1 Sergio Martins 2009-03-12 16:26:35 UTC
SVN commit 938647 by smartins:

Multiday events are now properly counted (recurring and non recurring).

BUG: 181260
BUG: 181363


 M  +51 -10    kotimespentview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=938647