Multiday events are now properly counted (recurring and non recurring).

BUG: 181260
BUG: 181363

svn path=/trunk/KDE/kdepim/; revision=938647